--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -13,7 +13,7 @@
       <nav>
         <div class="nav-container">
           <div class="logo">
-            <img src="../Images/MIE-logo.png" alt="Logo" />
+            <img src="../Img/MIE-logo.png" alt="Logo" />
           </div>
           <ul class="nav-links">
             <li>
@@ -22,13 +22,6 @@
             <li>
               <a href="../HTML/about.html" data-page="../HTML/about.html"
                 >About Us</a
-              >
-            </li>
-            <li>
-              <a
-                href="../HTML/competition.html"
-                data-page="../HTML/competition.html"
-                >Competition</a
               >
             </li>
             <li>
@@ -48,9 +41,6 @@
         </div>
       </nav>
       <div class="landing">
-        <!-- <div class="landing-image">
-                <img src="../Images/ssssdff.png" alt="Landing Image">
-            </div> -->
         <div class="landing-text">
           <h1>PROJECTS.</h1>
         </div>
@@ -58,13 +48,11 @@
     </header>
     <!-- ==========projects=========== -->
     <section class="projects">
-      <!-- <div class="title">
-            <h1>PROJECTS</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur debitis saepe suscipit perspiciatis iure modi quas amet! Pariatur, placeat modi iusto autem provident harum id eos officia natus voluptate nesciunt.</p>
-        </div> -->
       <div id="projects-container">
         <div class="project-sec">
-          <div class="img"><img src="../Images/4152.png" alt="" /></div>
+          <div class="img">
+            <img src="../Img/4152.png" alt="" />
+          </div>
           <div class="content">
             <h3>Automation</h3>
             <p>
@@ -76,7 +64,9 @@
           </div>
         </div>
         <div class="project-sec">
-          <div class="img"><img src="../Images/4152.png" alt="" /></div>
+          <div class="img">
+            <img src="../Img/4152.png" alt="" />
+          </div>
           <div class="content">
             <h3>Automation</h3>
             <p>
@@ -88,43 +78,9 @@
           </div>
         </div>
         <div class="project-sec">
-          <div class="img"><img src="../Images/4152.png" alt="" /></div>
-          <div class="content">
-            <h3>Automation</h3>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime,
-              dicta animi quas repellat nemo atque tempore ducimus consectetur!
-              Esse quis quidem dolores est fugit, sequi vitae minus officiis
-              itaque voluptate.
-            </p>
+          <div class="img">
+            <img src="../Img/4152.png" alt="" />
           </div>
-        </div>
-        <div class="project-sec">
-          <div class="img"><img src="../Images/4152.png" alt="" /></div>
-          <div class="content">
-            <h3>Automation</h3>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime,
-              dicta animi quas repellat nemo atque tempore ducimus consectetur!
-              Esse quis quidem dolores est fugit, sequi vitae minus officiis
-              itaque voluptate.
-            </p>
-          </div>
-        </div>
-        <div class="project-sec">
-          <div class="img"><img src="../Images/4152.png" alt="" /></div>
-          <div class="content">
-            <h3>Automation</h3>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime,
-              dicta animi quas repellat nemo atque tempore ducimus consectetur!
-              Esse quis quidem dolores est fugit, sequi vitae minus officiis
-              itaque voluptate.
-            </p>
-          </div>
-        </div>
-        <div class="project-sec">
-          <div class="img"><img src="../Images/4152.png" alt="" /></div>
           <div class="content">
             <h3>Automation</h3>
             <p>
