--- a/HTML/about.html
+++ b/HTML/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../CSS/about.css" />
+    <link rel="stylesheet" href="{% static 'css/about.css' %}" />
     <!-- Font Awesome links -->
     <link rel="stylesheet" href="../Awesome/all.css">
     <link rel="stylesheet" href="../Awesome/fontawesome.css">
@@ -16,24 +17,24 @@
       <nav id="nav-placeholder">
         <div class="nav-container">
           <div class="logo">
-            <img src="../Img/MIE-logo.png" alt="Logo" />
+            <img src="{% static 'img/MIE-logo.png' %}" alt="Logo" />
           </div>
           <ul class="nav-links">
             <li>
-              <a href="../HTML/home.html" data-page="../HTML/home.html">Home</a>
+              <a href="/front" data-page="./front">Home</a>
             </li>
             <li>
-              <a href="../HTML/about.html" data-page="../HTML/about.html"
+              <a href="./about" data-page="../about"
                 >About Us</a
               >
             </li>
             <li>
-              <a href="../HTML/projects.html" data-page="../HTML/projects.html"
+              <a href="./projects" data-page="../projects"
                 >Projects</a
               >
             </li>
             <li>
-              <a href="../HTML/contact.html" data-page="../HTML/contact.html"
+              <a href="./contact" data-page="../contact"
                 >Contact Us</a
               >
             </li>
@@ -93,12 +94,12 @@
             <p>IEEE is the Institute of Electrical and Electronics Engineers. It's a non-profit organization Built by a group of engineers who recognized the importance of spreading knowledge and technology in the world</p>
           </div>
           <div class="img">
-            <img src="../Img/IEEE YP.png" alt="">
+            <img src="{% static 'img/IEEE YP.png' %}"$3>
           </div>
         </div>
         <div class="ieee_yp">
           <div class="img">
-            <img src="../Img/IEEE YP.png" alt="">
+            <img src="{% static 'img/IEEE YP.png' %}"$3>
           </div>
           <div class="text">
             <h2>IEEE Young Professionals</h2>
@@ -114,7 +115,7 @@
           </div>
           <div class="leads">
             <div class="lead">
-              <img src="../Img/Lead/Seif Mostafa.jpeg" alt="">
+              <img src="{% static 'img/Lead/Seif Mostafa.jpeg' %}"$3>
               <h2>Seif Mostafa</h2>
               <p>MIE Chairman</p>
               <div class="icon">
@@ -127,7 +128,7 @@
               </div>
             </div>
           <div class="lead">
-            <img src="../Img/Lead/Mohamed Fahmy.jpeg" alt="">
+            <img src="{% static 'img/Lead/Mohamed Fahmy.jpeg' %}"$3>
             <h2>Mohmed Fahmy</h2>
             <p>MIE Vice Chairman</p>
             <div class="icon">
@@ -140,7 +141,7 @@
             </div>
           </div>
           <div class="lead">
-            <img src="../Img/Lead/Mahmoud elbahrawy.jpeg" alt="">
+            <img src="{% static 'img/Lead/Mahmoud elbahrawy.jpeg' %}"$3>
             <h2>Mahmoud elbahrawy</h2>
             <p>Treasurer</p>
             <div class="icon">
@@ -153,7 +154,7 @@
             </div>
           </div>
           <div class="lead">
-            <img src="../Img/Lead/Ziad.jpeg" alt="">
+            <img src="{% static 'img/Lead/Ziad.jpeg' %}"$3>
             <h2>Ziad Nasser </h2>
             <p>Secretary</p>
             <div class="icon">
@@ -166,7 +167,7 @@
             </div>
           </div>
           <div class="lead">
-            <img src="../Img/Lead/Seif Mostafa.jpeg" alt="">
+            <img src="{% static 'img/Lead/Seif Mostafa.jpeg' %}"$3>
             <h2>Sara Jakoub</h2>
             <p>Sponsorship Lead</p>
             <div class="icon">
@@ -179,7 +180,7 @@
             </div>
           </div>
           <div class="lead">
-            <img src="../Img/Lead/Eman.jpeg" alt="">
+            <img src="{% static 'img/Lead/Eman.jpeg' %}"$3>
             <h2>Eman Elsharkawy</h2>
             <p>Operations and Materials Lead</p>
             <div class="icon">
@@ -192,7 +193,7 @@
             </div>
           </div>
           <div class="lead">
-            <img src="../Img/Lead/WhatsApp Image 2024-02-18 at 1.37.57 PM.jpeg" alt="">
+            <img src="{% static 'img/Lead/WhatsApp Image 2024-02-18 at 1.37.57 PM.jpeg' %}"$3>
             <h2>Ahmed Ezzat </h2>
             <p>Registration Lead</p>
             <div class="icon">
@@ -205,7 +206,7 @@
             </div>
           </div>
           <div class="lead">
-            <img src="../Img/Lead/IMG-20230626-WA0140 - Alaa Kamal.jpg" alt="">
+            <img src="{% static 'img/Lead/IMG-20230626-WA0140 - Alaa Kamal.jpg' %}"$3>
             <h2>Alaa Kamal</h2>
             <p>Competition Lead</p>
             <div class="icon">
@@ -220,7 +221,7 @@
             </div>
           </div>
           <div class="lead">
-            <img src="../Img/Lead/Abdelrahman.jpeg" alt="">
+            <img src="{% static 'img/Lead/Abdelrahman.jpeg' %}"$3>
             <h2>Abdelrahman Sepaey</h2>
             <p>HR Lead</p>
             <div class="icon">
@@ -235,7 +236,7 @@
             </div>
           </div>
           <div class="lead">
-            <img src="../Img/Lead/Nour Basel.jpg" alt="">
+            <img src="{% static 'img/Lead/Nour Basel.jpg' %}"$3>
             <h2>Nour Basel</h2>
             <p>Multimedia Lead</p>
             <div class="icon">
@@ -250,7 +251,7 @@
             </div>
           </div>
           <div class="lead">
-            <img src="../Img/Lead/Omar Alsaqaan.jpeg" alt="">
+            <img src="{% static 'img/Lead/Omar Alsaqaan.jpeg' %}"$3>
             <h2>Omar Elsaqaan</h2>
             <p>PR Lead</p>
             <div class="icon">
@@ -265,7 +266,7 @@
             </div>
           </div>
           <div class="lead">
-            <img src="../Img/Lead/Mahmoud Rafaat.jpeg" alt="">
+            <img src="{% static 'img/Lead/Mahmoud Rafaat.jpeg' %}"$3>
             <h2>Mahmoud Raafat</h2>
             <p>Marketing Lead</p>
             <div class="icon">
@@ -311,40 +312,40 @@
           <div class="footer-column">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="../HTML/home.html">Home</a></li>
-              <li><a href="../HTML/about.html">About</a></li>
-              <li><a href="../HTML/competition.html">Competition</a></li>
-              <li><a href="../HTML/projects.html">Projects</a></li>
-              <li><a href="../HTML/contact.html">Contact</a></li>
+              <li><a href="/front">Home</a></li>
+              <li><a href="./about">About</a></li>
+              <li><a href="./competition">Competition</a></li>
+              <li><a href="./projects">Projects</a></li>
+              <li><a href="./contact">Contact</a></li>
             </ul>
           </div>
           <div class="footer-column">
             <h3>Follow Us</h3>
             <div class="social-links">
               <a href="#"
-                ><img
-                  height="30"
-                  width="30"
-                  src="../Img/socail icons/facebook.png"
-                  alt="facebook"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
-              <a href="#"
-                ><img
-                  height="30"
-                  width="30"
-                  src="../Img/socail icons/instagram.png"
-                  alt="instagram"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
-              <a href="#"
-                ><img
-                  height="30"
-                  width="30"
-                  src="../Img/socail icons/linkedin.png"
-                  alt="linkedin"
-                  style="filter: brightness(100) grayscale(1) invert(1)"
-              /></a>
+                  ><img
+                    height="30"
+                    width="30"
+                    src="{% static 'img/socail icons/facebook.png' %}"
+                    alt="facebook"
+                    style="filter: brightness(100) grayscale(1) invert(1)"
+                /></a>
+                <a href="#"
+                  ><img
+                    height="30"
+                    width="30"
+                    src="{% static 'img/socail icons/instagram.png' %}"
+                    alt="instagram"
+                    style="filter: brightness(100) grayscale(1) invert(1)"
+                /></a>
+                <a href="#"
+                  ><img
+                    height="30"
+                    width="30"
+                    src="{% static 'img/socail icons/linkedin.png' %}"
+                    alt="linkedin"
+                    style="filter: brightness(100) grayscale(1) invert(1)"
+                /></a>
             </div>
           </div>
         </div>
